# siski-bot-tg

./: .gitignore  Dockerfile  README.md  env.example  gif_urls.txt  pyproject.toml
pencil_bot/: config.py  gif_bot.py  handlers.py  main.py
